# pip

./: MANIFEST.in  setup.cfg  setup.py
docs/html/: user_guide.rst
src/pip/_internal/cli/: parser.py
src/pip/_internal/commands/: install.py
