[metadata]
name = pip
author = The pip developers
author_email = distutils-sig@python.org
license = MIT
license_file = LICENSE.txt
description = The PyPA recommended tool for installing Python packages.
keywords =
    distutils
    easy_install
    egg
    setuptools
    wheel
    virtualenv
url = https://pip.pypa.io/
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Software Development :: Build Tools
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

project_urls =
    Documentation = https://pip.pypa.io
    Source = https://github.com/pypa/pip
    Issues = https://github.com/pypa/pip/issues
    Travis CI = https://travis-ci.org/pypa/pip

[options]
packages = find:
zip_safe = False
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
package_dir =
    = src
setup_requires = setuptools>=30.3.0, wheel

[options.packages.find]
where = src
exclude =
    contrib
    docs
    tests*
    tasks

[options.package_data]
pip._vendor.certifi = *.pem
pip._vendor.requests = *.pem
pip._vendor.distlib._backport = sysconfig.cfg
pip._vendor.distlib = t32.exe; t64.exe; w32.exe; w64.exe


[isort]
profile = black
skip =
    ./build,
    .nox,
    .tox,
    .scratch,
    _vendor,
    data
known_third_party =
    pip._vendor

[flake8]
max-line-length = 88
exclude =
    ./build,
    .nox,
    .tox,
    .scratch,
    _vendor,
    data
enable-extensions = G
extend-ignore =
    G200, G202,
    # black adds spaces around ':'
    E203,
per-file-ignores =
    # G: The plugin logging-format treats every .log and .error as logging.
    noxfile.py: G
    # B011: Do not call assert False since python -O removes these calls
    tests/*: B011
    # TODO: Remove IOError from except (OSError, IOError) blocks in
    # these files when Python 2 is removed.
    # In Python 3, IOError have been merged into OSError
    # https://github.com/PyCQA/flake8-bugbear/issues/110
    src/pip/_internal/utils/filesystem.py: B014
    src/pip/_internal/network/cache.py: B014
    src/pip/_internal/utils/misc.py: B014

[mypy]
follow_imports = silent
ignore_missing_imports = True
disallow_untyped_defs = True
disallow_any_generics = True

[mypy-pip/_vendor/*]
follow_imports = skip
ignore_errors = True

[tool:pytest]
addopts = --ignore src/pip/_vendor --ignore tests/tests_cache -r aR
markers =
    network: tests that need network
    incompatible_with_test_venv
    incompatible_with_venv
    no_auto_tempdir_manager
    unit: unit tests
    integration: integration tests
    bzr: VCS: Bazaar
    svn: VCS: Subversion
    mercurial: VCS: Mercurial
    git: VCS: git
    yaml: yaml based tests
    fails_on_new_resolver: Does not yet work on the new resolver

[coverage:run]
branch = True
# Do not gather coverage for vendored libraries.
omit = */_vendor/*
# Centralized absolute file prefix for coverage files.
data_file = ${COVERAGE_OUTPUT_DIR}/.coverage
# By default, each covered process will try to truncate and then write to
# `data_file`, but with `parallel`, they will write to separate files suffixed
# with hostname, pid, and a timestamp.
parallel = True
# If not set, then at the termination of each worker (when using pytest-xdist),
# the following is traced: "Coverage.py warning: Module pip was previously
# imported, but not measured (module-not-measured)"
disable_warnings = module-not-measured

[coverage:paths]
# We intentionally use "source0" here because pytest-cov unconditionally sets
# "source" after loading the config.
source0 =
    # The primary source code path which other paths will be combined into.
    src/pip/
    # Unit test source directory e.g.
    # `.tox/coverage-py3/lib/pythonX.Y/site-packages/pip/...`
    */site-packages/pip/
    # Functional test virtual environment directories, which look like
    # `tmpdir/pip0/pip/src/pip/...`
    */pip/src/pip/

[coverage:report]
exclude_lines =
    # We must re-state the default because the `exclude_lines` option overrides
    # it.
    pragma: no cover
    # This excludes typing-specific code, which will be validated by mypy anyway.
    if MYPY_CHECK_RUNNING
    # Can be set to exclude e.g. `if PY2:` on Python 3
    ${PIP_CI_COVERAGE_EXCLUDES}

[bdist_wheel]
universal = 1
